neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: neo4j
  name: neo4j
spec:
  ports:
    - name: "7474"
      port: 7474
      targetPort: 7474
    - name: "7687"
      port: 7687
      targetPort: 7687
  selector:
    io.kompose.service: neo4j
status:
  loadBalancer: {}
